<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/screen_colour"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/LogoView"
        android:layout_width="260dp"
        android:layout_height="230dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/SUUsername"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogoView"
        android:nextFocusDown="@+id/SUFull_name"
        android:ems="10"
        android:hint="@string/username_hint"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColorHint="@color/login_text_colour"
        android:textColor="@color/login_text_colour"
        android:background="@drawable/rounded_corner"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:inputType="textFilter" />

    <EditText
        android:id="@+id/SUFull_name"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/SUUsername"
        android:nextFocusDown="@+id/SUEmail"
        android:ems="10"
        android:hint="@string/full_name_hint"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColorHint="@color/login_text_colour"
        android:textColor="@color/login_text_colour"
        android:background="@drawable/rounded_corner"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/SUEmail"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/SUFull_name"
        android:nextFocusDown="@+id/SUPass"
        android:layout_marginStart="0dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColorHint="@color/login_text_colour"
        android:textColor="@color/login_text_colour"
        android:background="@drawable/rounded_corner"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/SUPass"
        android:layout_marginTop="5dp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SUEmail"
        android:nextFocusDown="@+id/SUConfPass"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_hint"
        android:textStyle="bold"
        android:textColorHint="@color/login_text_colour"
        android:textColor="@color/login_text_colour"
        android:background="@drawable/rounded_corner"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/SUConfPass"
        android:layout_marginTop="5dp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SUPass"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:textStyle="bold"
        android:textColorHint="@color/login_text_colour"
        android:textColor="@color/login_text_colour"
        android:background="@drawable/rounded_corner"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/SUConfPass"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColorHint="@color/login_text_colour"
        android:textColor="@color/login_text_colour"
        android:background="@drawable/rounded_corner"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/LoginHere"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_height="24dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_instead"/>

</RelativeLayout>