<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/comment_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_user_name"
                android:textAlignment="textStart"
                android:layout_marginStart="3dp"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                android:textStyle="bold"
                android:lines="1"/>

            <TextView
                android:id="@+id/comment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_date"
                android:paddingTop="2dp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textColor="@color/textColor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" at "
                android:paddingTop="2dp"/>

            <TextView
                android:id="@+id/comment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_time_tv"
                android:paddingTop="2dp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:layout_marginStart="2dp"/>
        </LinearLayout>

            <TextView
                android:id="@+id/comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment_body"
                android:textAlignment="textStart"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>