<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/article_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/post_img_description"
            android:background="@drawable/image_border"
            android:cropToPadding="true"/>

        <TextView
            android:id="@+id/article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_title"
            android:textAlignment="textStart"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/colorSecondary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:lines="2"/>

        <TextView
            android:id="@+id/article_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/article_body"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:layout_margin="2dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:scrollbars = "vertical"/>
    </LinearLayout>
</RelativeLayout>