<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/screen_colour"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/LogoView"
        android:layout_width="270dp"
        android:layout_height="240dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogoView"
        android:layout_marginStart="0dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColorHint="@color/login_text_colour"
        android:textColor="@color/login_text_colour"
        android:background="@drawable/rounded_corner"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/LoginPass"
        android:layout_marginTop="10dp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginEmail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_hint"
        android:textStyle="bold"
        android:textColorHint="@color/login_text_colour"
        android:textColor="@color/login_text_colour"
        android:background="@drawable/rounded_corner"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/LoginPass"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColorHint="@color/login_text_colour"
        android:textColor="@color/login_text_colour"
        android:background="@drawable/rounded_corner"
        android:text="@string/login" />

    <TextView
        android:id="@+id/SignUpHere"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_height="24dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_instead"/>

</RelativeLayout>