<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/image_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="5dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/article_preview_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/article_title"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <TextView
                            android:id="@+id/article_preview_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/post_date_tv"
                            android:textAlignment="textStart"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/article_preview_at"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/post_at_tv"
                            android:textAlignment="textStart"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/article_preview_time_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="@string/post_time_tv"
                            android:textAlignment="textStart"
                            android:textColor="@color/textColor"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/article_preview_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:background="@drawable/image_border"
            android:contentDescription="@string/post_img_description"
            android:cropToPadding="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/article_preview_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/article_body"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/textColor"
            android:maxLength="100"
            android:lines="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/article_like_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_unliked"
                    android:layout_marginStart="3dp"
                    android:background="@color/screen_colour"/>
                <TextView
                    android:id="@+id/article_like_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/textColor"
                    android:text="@string/like_count"
                    android:layout_marginStart="3dp"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layoutDirection="rtl">

                <ImageButton
                    android:id="@+id/article_comment_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_comment_black"
                    android:background="@color/screen_colour"
                    android:layout_marginStart="3dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>