<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/profile_user_details_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/screen_colour">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/img_profile_template"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/colorSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_user_name"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:lines="1"/>

                <ImageButton
                    android:id="@+id/edit_profile_btn"
                    android:visibility="visible"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/edit_black"/>

            </LinearLayout>

            <TextView
                android:id="@+id/profile_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_bio"
                android:textAlignment="textStart"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLength="50"
                android:lines="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">
                <Button
                    android:id="@+id/profile_add_friend_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/add_friend_btn"
                    android:background="@drawable/rounded_green_button"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/profile_decline_friend_btn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_friend_btn"
                    android:background="@drawable/rounded_corner"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_users_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_user_details_holder"
        android:background="@color/colorSecondary">

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>